turtleart.kerr40.Kerr40.scala.error
Compilation error:
Kerr40:4: error: ')' expected but ';' found.
  droite(45);avance(30;droite(90);avance(30);gauche(30);avance(30);droite(90); avance(30);gauche(135)
                      ^